<resources>
    <string name="app_name">Schulte table in full screen</string>
    <string name="advice">Advice</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="donation">Donation</string>
    <string name="table">Table</string>
    <string name="headline_data">Date</string>
    <string name="headline_size">Size</string>
    <string name="headline_time">Time</string>
    <string name="headline_results">Results</string>
    <string name="end_game">End of the game</string>
    <string name="letters">Letters</string>
    <string name="numbers">Numbers</string>
    <string name="NumbersLetters">Numbers\\Letters</string>
    <string name="TwoTables">Two Tables</string>
    <string name="Animation">Animation</string>
    <string name="TouchFoundCells">Touch found cells</string>
    <string name="OtherSettings">Other Settings</string>
    <string name="NumberOfRows">Number of rows</string>
    <string name="NumberOfColumns">Number of columns</string>
    <string name="TableSize">Table size</string>
    <string name="rus">Rus</string>
    <string name="eng">Eng</string>
    <string name="choiceOfLetterLanguage">Russian\\English letters</string>
    <string name="moveHint">Move Hint</string>
    <string name="MoveHint">Next:</string>
    <string name="wrongTable">Wrong table</string>
    <string name="internalError">"Internal error. Please restart the app. "</string>
    <string name="oneTable">One table</string>
    <string name="twoTables">Two tables</string>
    <string name="allOptions">All options</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="playedSizesTable">Played sizes</string>
    <string name="quantityTables">Number of tables</string>
    <string name="dataType">Data type</string>
    <string name="englishLetters">English letters</string>
    <string name="russianLetters">Russian letters</string>
    <string name="allLetters">All letters</string>
    <string name="allValueTypes">All value types</string>
    <string name="valueTypeLetters">letters</string>
    <string name="valueTypeNumbers">numbers</string>
    <string name="languageEnglish">English</string>
    <string name="languageRussian">Russian</string>
    <string name="yourTime">"Your time "</string>
    <string name="newGame">New game</string>
    <string name="continueCurrentGame">Continue current game</string>
    <string name="allSize">All sizes</string>
    <string name="adviceHeadline">Advice</string>
    <string name="dataInTheTable">Data in the table</string>
    <string name="banner_ad_unit_id">ca-app-pub-4698101566958568/6830072663</string>
    <string name="about_the_app">about the app</string>
    <string name="an_rules"><b><u>Basic rules when working with a table:</u></b></string>
    <string name="an_important_point"><b><u>An important point:</u></b></string>
    <string name="delete">Delete</string>
    <string name="icons_by">Icons by <u>icons8.com</u></string>
    <string name="phone_frame_with_screenshots">Google Play screenshots with the help deavvi from <u>pixabay.com</u></string>
    <string name="background_by">Background designed by 588ku from the website Pngtree.com</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="level_text">Level %1$d</string>
<!-- -
    This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638
<!- -->
    <string name="interstitial_ad_unit_id">YOUR_INTERSTITIAL_AD_UNIT_ID</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>