<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/adviceFragment"
        android:title="@string/advice"
        android:icon="@drawable/ic_advice"
        android:menuCategory="secondary"/>

    <item
        android:id="@+id/statisticFragment"
        android:title="@string/statistics"
        android:icon="@drawable/ic_statistic"
        android:menuCategory="secondary"/>

    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        android:menuCategory="secondary"/>

    <item
        android:id="@+id/tableFragment2"
        android:title="@string/table"
        android:icon="@drawable/ic_table"
        android:menuCategory="secondary"/>
</menu>