<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CustomizationActivity">

    <TextView
        android:id="@+id/tvTableSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TableSize"
        android:textColor="@color/black"
        android:textSize="@dimen/headerTextSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/headlineTime"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/NumberOfColumns"
                android:textColor="@color/black"
                android:textSize="@dimen/ordinaryTextSize" />

            <Spinner
                android:id="@+id/spinnerColumns"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/ordinaryTextSize"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/NumberOfRows"
                android:textColor="@color/black"
                android:textSize="@dimen/ordinaryTextSize" />

            <Spinner
                android:id="@+id/spinnerRows"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textAlignment="textEnd"
                android:scrollbarSize="90dp"/>

        </TableRow>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/headlineResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OtherSettings"
            android:textSize="@dimen/headerTextSize"
            android:textColor="@color/black"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchTouchСells"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TouchFoundCells"
            android:textSize="@dimen/ordinaryTextSize"
            android:textColor="@color/black"
            app:switchMinWidth="@dimen/switchSize"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchAnimation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Animation"
            android:textSize="@dimen/ordinaryTextSize"
            android:textColor="@color/black"
            app:switchMinWidth="@dimen/switchSize"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchTwoTables"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TwoTables"
            android:textColor="@color/black"
            android:textSize="@dimen/ordinaryTextSize"
            app:switchMinWidth="@dimen/switchSize"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchNumbersLetters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NumbersLetters"
            app:showText="true"
            android:textOff="@string/numbers"
            android:textOn="@string/letters"
            app:switchMinWidth="@dimen/switchSize"
            android:textColor="@color/black"
            android:textSize="@dimen/ordinaryTextSize"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchRussianOrEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choiceOfLetterLanguage"
            app:showText="true"
            android:textOff="@string/russian"
            android:textOn="@string/english"
            app:switchMinWidth="@dimen/switchSize"
            android:textColor="@color/black"
            android:textSize="@dimen/ordinaryTextSize"
            android:backgroundTint="@color/black"/>

        <Button
            android:id="@+id/buttonToTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Table"
            android:textSize="@dimen/ordinaryTextSize"/>

    </LinearLayout>

</LinearLayout>


