<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".NavigationFragment"
    android:gravity="center"
    android:background="#00000000">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/adviceNavigationFragment"
            android:text="@string/advice"
            android:src="@drawable/ic_advice"
            style="@style/ImageButtonNavigationFragment"/>

        <ImageButton
            android:id="@+id/statisticNavigationFragment"
            android:text="@string/statistics"
            android:src="@drawable/ic_statistic"
            style="@style/ImageButtonNavigationFragment"/>

        <ImageButton
            android:id="@+id/settingsNavigationFragment"
            android:text="@string/settings"
            android:src="@drawable/ic_settings"
            style="@style/ImageButtonNavigationFragment"/>

        <ImageButton
            android:id="@+id/tableNavigationFragment"
            android:text="@string/table"
            android:src="@drawable/ic_table"
            style="@style/ImageButtonNavigationFragment"/>
    </LinearLayout>
</LinearLayout>