<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.SettingsActivity"
    android:background="@color/mainBackgroundColor">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headlineResults"
                style="@style/TextViewHeadline"
                android:text="@string/settings"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchPressButtons"
                style="@style/Switch"
                android:text="@string/TouchFoundCells" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchMoveHint"
                style="@style/Switch"
                android:text="@string/moveHint"
                android:textColor="@color/checkable_switch"
                app:switchMinWidth="@dimen/switchSize" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchAnimation"
                style="@style/Switch"
                android:text="@string/Animation" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchTwoTables"
                style="@style/Switch"
                android:text="@string/TwoTables" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/buttonToTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:text="@string/Table"
        android:textColor="@color/mainTextColor"
        android:textSize="@dimen/commonTextSize" />
</LinearLayout>


