<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.SettingsFragment"
    android:background="@color/mainBackgroundColor">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView3"
                android:name="ru.schultetabledima.schultetable.AdBannerFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/headlineResults"
                style="@style/TextViewHeadline"
                android:layout_height="wrap_content"
                android:text="@string/settings" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/item_background"
            android:padding="15dp"
            android:layout_margin="5dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchPressButtons"
                android:theme="@style/FilterSwitchThemeGreen"                android:layout_height="wrap_content"
                android:text="@string/TouchFoundCells"
                style="@style/Switch"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchMoveHint"
                android:theme="@style/FilterSwitchThemeGreen"                android:layout_height="wrap_content"
                android:text="@string/moveHint"
                android:textColor="@color/checkable_switch"
                style="@style/Switch" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchAnimation"
                android:theme="@style/FilterSwitchThemeGreen"                android:layout_height="wrap_content"
                android:text="@string/Animation"
                style="@style/Switch" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchTwoTables"
                style="@style/Switch"
                android:theme="@style/FilterSwitchThemeGreen"
                android:layout_height="wrap_content"
                android:text="@string/TwoTables" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/item_background"
            android:padding="15dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewSettings"
                    android:text="@string/dataInTheTable" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tabGravity="fill"
                    app:tabMode="scrollable"
                    app:tabTextColor="@color/mainTextColor"/>

            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>


