<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/main_item_background_color"
    app:cardCornerRadius="30dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/linearLayoutCompatId">

        <com.yandex.mobile.ads.banner.BannerAdView
            android:id="@+id/banner_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_game"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yourTime"
            android:textSize="25sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/dialog_positive_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/newGame"
                    app:textAllCaps="false"
                    app:icon="@drawable/ic_playbutton"
                    app:iconSize="23dp"
                    app:iconPadding="8dp"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:textSize="20sp"
                    android:textColor="@color/mainTextColor"
                    android:layout_gravity="end"
                    app:iconTint="@color/mainTextColor"/>

                <Button
                    android:id="@+id/dialog_negative_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:textAllCaps="false"
                    android:text="@string/continueCurrentGame"
                    app:icon="@drawable/ic_resume"
                    app:iconPadding="8dp"
                    app:iconSize="23dp"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:textSize="20sp"
                    android:textColor="@color/mainTextColor"
                    android:layout_gravity="end"
                    android:gravity="end"
                    app:iconTint="@color/mainTextColor"
                    android:visibility ="visible"/>

                <Button
                    android:id="@+id/dialog_neutral_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/statistics"
                    app:textAllCaps="false"
                    app:icon="@drawable/ic_statistic_dialogue"
                    app:iconSize="23dp"
                    app:iconPadding="8dp"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:textSize="20sp"
                    android:textColor="@color/mainTextColor"
                    android:layout_gravity="end"
                    app:iconTint="@color/mainTextColor"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>