<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTableSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TableSize"
            android:textColor="@color/mainTextColor"
            android:textSize="@dimen/headerTextSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView4"
                    android:text="@string/NumberOfRows"
                    style="@style/TextViewSettings" />

                <Spinner
                    android:id="@+id/spinnerRowsNumbers"
                    style="@style/Spinner"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/headlineTime"
                    android:text="@string/NumberOfColumns"
                    style="@style/TextViewSettings"/>

                <Spinner
                    android:id="@+id/spinnerColumnsNumbers"
                    style="@style/Spinner"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/customMinHeight"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>











